add extra panels to total 56 panels

--- a/version-2/index.html
+++ b/version-2/index.html
@@ -39,7 +39,34 @@
       <div class="panel" data-id="IMG_28"></div>
       <div class="panel" data-id="IMG_29"></div>
       <div class="panel" data-id="IMG_30"></div>
+      <div class="panel" data-id="IMG_31"></div>
+      <div class="panel" data-id="IMG_32"></div>
+      <div class="panel" data-id="IMG_33"></div>
+      <div class="panel" data-id="IMG_34"></div>
+      <div class="panel" data-id="IMG_35"></div>
+      <div class="panel" data-id="IMG_36"></div>
+      <div class="panel" data-id="IMG_37"></div>
+      <div class="panel" data-id="IMG_38"></div>
+      <div class="panel" data-id="IMG_39"></div>
+      <div class="panel" data-id="IMG_40"></div>
+      <div class="panel" data-id="IMG_41"></div>
+      <div class="panel" data-id="IMG_42"></div>
+      <div class="panel" data-id="IMG_43"></div>
+      <div class="panel" data-id="IMG_44"></div>
+      <div class="panel" data-id="IMG_45"></div>
+      <div class="panel" data-id="IMG_46"></div>
+      <div class="panel" data-id="IMG_47"></div>
+      <div class="panel" data-id="IMG_48"></div>
+      <div class="panel" data-id="IMG_49"></div>
+      <div class="panel" data-id="IMG_50"></div>
+      <div class="panel" data-id="IMG_51"></div>
+      <div class="panel" data-id="IMG_52"></div>
+      <div class="panel" data-id="IMG_53"></div>
+      <div class="panel" data-id="IMG_54"></div>
+      <div class="panel" data-id="IMG_55"></div>
+      <div class="panel" data-id="IMG_56"></div>
     </div>
+    <div class="clearfix"></div>
     <div id="footer">
       <a href="#">Gallery</a>
       <a href="#">Wait what</a>
