FOOTER - Add the new links to Gallery, Portfolio, About in the footer

--- a/version-2/index.html
+++ b/version-2/index.html
@@ -69,8 +69,9 @@
     <div class="clearfix"></div>
   </div>
     <div id="footer">
-      <a href="#">Gallery</a>
-      <a href="#">Wait what</a>
+      <a href="/gallery">Gallery</a>
+      <a href="/portfolio">Portfolio</a>
+      <a href="/about">About</a>
     </div>
 </body>
 
