--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -6,15 +6,182 @@
   <title>g a l l e r y</title>
 </head>
 <body>
-  <div class="big-wrap">
-    <h1>in the gallery</h1>
-    <div id="footer">
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="about.html">About</a>
-    </div>
+  <div class="gallery-wrap">
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+      <div class="card">
+        <img src="images/IMG_01.JPG">
+      </div>
+    <div class="clearfix"></div>
   </div>
-
+  <div id="footer">
+    <a href="index.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="about.html">About</a>
+  </div>
 </body>
 </html>
