Add the header for gallery and captions foor photos

--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -7,173 +7,230 @@
 </head>
 <body>
   <div class="gallery-wrap">
+    <h1>gallery of osiris</h1>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_02.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_03.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_04.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_05.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_06.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_07.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_08.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_09.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+      </div>
+      <div class="card">
+        <img src="images/IMG_10.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
         <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
-      </div>
-      <div class="card">
-        <img src="images/IMG_01.JPG">
+        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
     <div class="clearfix"></div>
   </div>
