Change Portfolio into Masks

--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -49,195 +49,195 @@
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_11.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_12.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_13.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_14.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_15.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_16.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_17.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_18.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_19.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_20.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_21.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_22.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_23.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_24.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_25.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_26.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_27.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_28.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_29.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_30.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_31.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_32.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_33.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_34.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_35.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_36.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_37.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_38.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_39.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_40.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_41.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_42.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_43.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_44.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_45.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_46.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_47.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_48.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_49.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_50.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_51.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_52.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_53.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_54.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_55.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
       <div class="card">
-        <img src="images/IMG_01.JPG">
+        <img src="images/IMG_56.JPG">
         <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
       </div>
     <div class="clearfix"></div>
   </div>
   <div id="footer">
     <a href="index.html">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="portfolio.html">Portfolio</a>
+    <a href="gallery.html" class="active">Gallery</a>
+    <a href="masks.html">Masks</a>
     <a href="about.html">About</a>
   </div>
 </body>
