--- a/version-2/about.html
+++ b/version-2/about.html
@@ -11,8 +11,8 @@
     <div id="footer">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="about.html">About</a>
+      <a href="masks.html">Masks</a>
+      <a href="about.html" class="active">About</a>
     </div>
   </div>
 </body>
