--- a/version-2/index.html
+++ b/version-2/index.html
@@ -70,9 +70,9 @@
     <div class="clearfix"></div>
   </div>
   <div id="footer">
-    <a href="index.html">Home</a>
+    <a href="index.html" class="active">Home</a>
     <a href="gallery.html">Gallery</a>
-    <a href="portfolio.html">Portfolio</a>
+    <a href="masks.html">Masks</a>
     <a href="about.html">About</a>
   </div>
 </body>
