--- a/version-2/masks.html
+++ b/version-2/masks.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="osiris_stylesheet.css">
-  <title>p o r t f o l i o</title>
+  <title>m a s k s</title>
 </head>
 <body>
   <div class="big-wrap">
-    <h1>in the portfolio page</h1>
+    <h1>in the masks page</h1>
     <div id="footer">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
-      <a href="portfolio.html">Portfolio</a>
+      <a href="masks.html" class="active">Masks</a>
       <a href="about.html">About</a>
     </div>
   </div>
