--- a/version-2/about.html
+++ b/version-2/about.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="osiris_stylesheet.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <title>a b o u t</title>
 </head>
 <body>
   <div class="big-wrap">
-    <h1>in the about page</h1>
+    <div class="contact-details">
+      <h1>peter cochrane</h1>
+      <p><i class="fa fa-envelope-o"></i> &nbsp; <a href="mailto:pescochrane@gmail.com" target="_top"> pescochrane@gmail.com</a></p>
+      <p><i class="fa fa-instagram"></i> &nbsp; <a href="https://instagram.com/pecoch/">pecoch</a></p>
+      <p><i class="fa fa-desktop"></i> &nbsp; <a href="http://www.petercochrane.us/">www.petercochrane.us</a></p>
+    </div>
     <div id="footer">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
